fix title looking ugly in 2 lines on mobile

--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body {
   word-spacing: 0.25rem;
   text-align: left;
   margin-top: 10%;
+  white-space: nowrap;
 }
 
 .role {
@@ -123,7 +124,7 @@ body {
 
 @media only screen and (min-width: 375px) {
   .title {
-    font-size: 2.5rem;
+    font-size: 2.25rem;
   }
   
   .role {
